# rag-benchmark

./: .gitignore  001-project-brief.md  002-implementation-plan.md  003-backend-specification.md  004-frontend-specification.md  005-implementation-checklist.md
rag-backend/: .env  .env.example  005-implementation-checklist.md  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  test_all.py  test_evaluation.py  test_orchestration.py  test_query_service.py
rag-backend/api/: __init__.py  main.py
rag-backend/api/routes/: query.py
rag-backend/api_gateway/: Dockerfile  __init__.py  main.py
rag-backend/api_gateway/routers/: __init__.py  admin.py  config.py  documents.py  query.py
rag-backend/common/: __init__.py  auth.py  config.py  database.py  db.py  errors.py  logging.py  models.py  schemas.py  vector.py
rag-backend/corpus_service/: Dockerfile  Readme.md  __init__.py  chunking_strategies.py  worker.py
rag-backend/corpus_service/tasks/: __init__.py  chunking.py  processing.py
rag-backend/db/init/: 01-init.sql
rag-backend/embedding_service/: Readme.md  models.py  service.py
rag-backend/evaluation_service/: __init__.py  metrics.py  service.py  utils.py
rag-backend/knowledge_graph_service/: __init__.py  entity_extraction.py  service.py
rag-backend/orchestration_service/: Readme.md  __init__.py  service.py
rag-backend/query_service/: query_enhancement.py  service.py  strategies.py
rag-backend/tests/: __init__.py  conftest.py
rag-backend/tests/unit/: __init__.py  test_api_gateway.py  test_basic.py  test_common.py  test_corpus_service.py  test_database.py  test_embedding_service.py  test_evaluation_service.py  test_knowledge_graph_service.py  test_query_service.py
rag-backend/vector_service/: sparse.py  store.py
rag-backend/vector_store/: __init__.py  models.py  service.py  sparse.py
