[tool.poetry]
name = "rag-benchmark"
version = "0.1.0"
description = "RAG Benchmark Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "common" },
    { include = "corpus_service" },
    { include = "embedding_service" },
    { include = "evaluation_service" },
    { include = "knowledge_graph_service" },
    { include = "orchestration_service" },
    { include = "query_service" },
    { include = "vector_store" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
openai = "^1.3.3"
numpy = "^1.26.1"
pandas = "^2.1.2"
tenacity = "^8.2.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
celery = "^5.3.4"
redis = "^5.0.1"
networkx = "^3.2.1"
pgvector = "^0.2.3"
python-multipart = "^0.0.6"
httpx = "^0.25.1"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
spacy = "^3.7.2"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
pydantic-settings = "^2.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*" 